--- a/zszhApp_v2/src/zszh_Products_new/ProductsList.mxml
+++ b/zszhApp_v2/src/zszh_Products_new/ProductsList.mxml
@@ -29,7 +29,7 @@
 			
 			protected function myList_initializeHandler(event:FlexEvent):void
 			{
-				myList.addEventListener(ItemClickEvent.ITEM_CLICK, sparkList_itemClickHandler);
+				//myList.addEventListener(ItemClickEvent.ITEM_CLICK, sparkList_itemClickHandler);
 			}
 			
 			private function sparkList_itemClickHandler(event:ItemClickEvent):void
@@ -73,17 +73,18 @@
 		
 				
 			<s:List id="myList" top="40" contentBackgroundColor="#10181e" borderVisible="false" horizontalCenter="0" 
-				itemRenderer="zszh_Products_old.ItemRender_Products" initialize="myList_initializeHandler(event)" mouseDown="myList_mouseDownHandler(event)"
+				itemRenderer="zszh_Products_new.ItemRender_Products" initialize="myList_initializeHandler(event)" mouseDown="myList_mouseDownHandler(event)"
 				height="100%" verticalScrollPolicy="off">
 				<s:layout>
 				<s:TileLayout orientation="rows" requestedColumnCount="3"/>
 				</s:layout>
 			
 				<s:ArrayCollection>
-				<fx:Object labelText="L型房间" imgSource="zszh_res/basic/wall/room_1.png" className="Room_2D" resourcePath=""/>
-				<fx:Object labelText="大房间" 	 imgSource="zszh_res/basic/wall/room_big.png" className="Room_2D" resourcePath=""/>
-				<fx:Object labelText="小房间"  imgSource="zszh_res/basic/wall/room_small.png" className="Room_2D" resourcePath=""/>
-				<fx:Object labelText="横墙"   imgSource="zszh_res/basic/wall/wall_h_divider.png" className="Room_2D" resourcePath=""/>
+				<fx:Object labelText="L型房间" imgSource="zszh_res/basic/wall/room_1.png" className="Room_2D" classArgument="2" resourcePath="room_1.png"/>
+				<fx:Object labelText="大房间" 	 imgSource="zszh_res/basic/wall/room_big.png" className="Room_2D" classArgument="1" resourcePath="room_big"/>
+				<fx:Object labelText="小房间"  imgSource="zszh_res/basic/wall/room_small.png" className="Room_2D" classArgument="4" resourcePath="room_small"/>
+				<fx:Object labelText="房型"   imgSource="zszh_res/basic/wall/wall_h_divider.png" className="Room_2D" classArgument="3" resourcePath="wall_h_divider"/>
+					
 				<fx:Object labelText="竖墙"   imgSource="zszh_res/basic/wall/wall_v_divider.png" className="model_bed" resourcePath=""/>
 				<fx:Object labelText="床00001" imgSource="zszh_res/models/beds/bed00001/bed00001_preview.png" className="model_bed" resourcePath="zszh_res/models/beds/bed00001/" objectName="bed00001"/>
 
