--- a/zszhApp_v2/src/zszh_Products_new/ItemRender_Products.mxml
+++ b/zszhApp_v2/src/zszh_Products_new/ItemRender_Products.mxml
@@ -25,18 +25,26 @@
 				
 				
 				var ds:DragSource = new DragSource();
-				ds.addData(dragInitiator, "myRule");//传递的数据
+				ds.addData(dragInitiator, "dragInitiator");//D&D拖拽源
 				
 				ds.addData(data.className, "className");//传递的数据
 				ds.addData(data.classArgument,"classArgument");
 				ds.addData(data.resourcePath, "resourcePath");//传递的数据
 				ds.addData(data.objectName, "objectName");//传递的数据
 				
+				var loader:Loader=new Loader;
+				loader.load(new URLRequest(event.currentTarget.img.source));
+				loader.contentLoaderInfo.addEventListener(Event.COMPLETE, OnComplete);
+				
 				var dragProxy:Image=new Image();
-				dragProxy.width=60;
-				dragProxy.height=60;
-				dragProxy.source=event.currentTarget.img.source;
-				DragManager.doDrag(dragInitiator, ds,event,dragProxy);
+				
+				
+				function OnComplete(e:Event):void
+				{
+					dragProxy.source=loader.content ;
+					DragManager.doDrag(dragInitiator, ds,event,dragProxy,-15,-5);
+				}
+				
 			}
 			
 		]]>
@@ -47,7 +55,7 @@
 			<s:VerticalLayout />
 		</s:layout>
 		<s:SkinnableContainer width="90" height="70" backgroundColor="0xff0000" >
-			<s:Image id="img" source="{data.imgSource}" width="60" height="60" backgroundColor="0x404040" verticalCenter="0" horizontalCenter="0" />
+			<s:Image id="img" source="{data.ImgThumbnail}" width="60" height="60" backgroundColor="0x404040" verticalCenter="0" horizontalCenter="0" />
 		</s:SkinnableContainer>
 		<s:Label text="{data.labelText}" width="90" textAlign="center" />
 	</s:SkinnableContainer>
